@@ -206,12 +206,47 @@ the following environment variables are also consulted:
 \begin{options}
 \item["OCAMLRUNPARAM"]  Same usage as in "ocamlrun"
   (see section~\ref{s:ocamlrun-options}), except that option "l"
-  is ignored (the operating system's stack size limit
-  is used instead).
+  is ignored.  (How to control the stack size is explained in
+  section~\ref{s:native:stacksize}.)
 \item["CAMLRUNPARAM"]  If "OCAMLRUNPARAM" is not found in the
   environment, then "CAMLRUNPARAM" will be used instead.  If
   "CAMLRUNPARAM" is not found, then the default values will be used.
 \end{options}
+
+\section{s:native:stacksize}{Size of the stack}
+
+Native-code executables produced by the "ocamlopt" compiler use the
+stack managed by the operating system to implement function calls in
+non-tail positions.  The system stack grows on demand up to a certain
+size limit maintained by the operating system.  We now explain how this
+size limit is determined and can be controlled.
+
+\begin{unix}
+Linux, macOS, and other Unix-like operating systems maintain two
+limits for the stack size: a current limit and a hard limit.  These
+limits can be modified (as long as the hard limit is not exceeded)
+with the "ulimit -s" shell command or the "setrlimit" system call.
+At start-up, executables generated by "ocamlopt" try to set a
+comfortable limit for the stack size, as follows:
+\begin{itemize}
+\item If the current limit is already at the hard limit, as happens if
+  a "ulimit -s" command was issued in the shell that starts the
+  executable, the stack size limit is unchanged.
+\item If the hard limit is ``unlimited'', as in many Linux
+  distributions, the stack size limit is raised to 1 Gibytes for 64-bit
+  platforms and 16 Mibytes for 32-bit platforms.
+\item Otherwise, the stack size limit is raised to the hard limit.
+  For example, this gives a limit of 64 Mibytes under macOS and 512
+  Mibytes under FreeBSD 64 bits.
+\end{itemize}
+\end{unix}
+
+\begin{windows}
+By default, the maximal size of the system stack is 64 Mibytes for 64-bit
+executables and 16 Mibytes for 32-bit executables.  It cannot be
+changed dynamically.  It can be changed at link-time by passing the
+appropriate "-stack" option to the "flexlink" linker.
+\end{windows}
 
 \section{s:compat-native-bytecode}{Compatibility with the bytecode compiler}
 
