@@ -29,6 +29,8 @@
 #include <errno.h>
 #include <sys/ioctl.h>
 #include <fcntl.h>
+#include <sys/time.h>
+#include <sys/resource.h>
 #include "caml/config.h"
 #if defined(SUPPORT_DYNAMIC_LINKING) && !defined(BUILDING_LIBCAMLRUNS)
 #define WITH_DYNAMIC_LINKING
@@ -432,5 +434,31 @@ int caml_num_rows_fd(int fd)
     return -1;
 #else
   return -1;
+#endif
+}
+
+void caml_increase_native_stack_size(void)
+{
+#ifdef RLIMIT_STACK
+  struct rlimit lim;
+  rlim_t newlim;
+  if (getrlimit(RLIMIT_STACK, &lim) == -1) return;
+  newlim = lim.rlim_max;
+  if (newlim == RLIM_INFINITY) {
+#ifdef ARCH_SIXTYFOUR
+    newlim = 1024*1024*1024; /* 1G */
+#else
+    newlim = 16*1024*1024; /* 16M */
+#endif
+  }
+  if (lim.rlim_cur >= newlim) return;
+  lim.rlim_cur = newlim;
+  if (setrlimit(RLIMIT_STACK, &lim) == -1) {
+    caml_gc_message(0x08, "Failed to increase native stack size\n");
+  } else {
+    caml_gc_message(0x08, "Increased native stack size to "
+                          "%"ARCH_INT64_PRINTF_FORMAT"u\n",
+                    (ARCH_UINT64_TYPE) newlim);
+  }
 #endif
 }
